# brawl-engine

./: .gitignore  CMakeLists.txt  README.md
shaders/: col_quad_shader.vert  font_shader.frag  test_shader.frag  test_shader.vert  tex_quad_shader.vert
src/: defines.h  logger.cpp  logger.h  main.cpp
src/chess/: board.cpp  board.h  chess.cpp  chess.h  piece.cpp  piece.h
src/chess/piece_impl/: bishop.cpp  bishop.h  horse.cpp  horse.h  king.cpp  king.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
src/core/: bclock.cpp  bclock.h  camera.cpp  camera.h  camera_2d.cpp  camera_2d.h  frame_data.h  logger.cpp  logger.h
src/ecs/: component_array.cpp  component_array.h  component_manager.cpp  component_manager.h  ecs.h  ecs_manager.cpp  ecs_manager.h  entity_manager.cpp  entity_manager.h  isystem.cpp  isystem.h  system_manager.cpp  system_manager.h
src/ecs/components/: texture_2d.h  transform.h
src/ecs/systems/: draw_system.cpp  draw_system.h
src/memory/: bmemory.cpp  bmemory.h  bstring.cpp  bstring.h  bvector.cpp  bvector.h  ptr_wrap.h
src/platform/: input.h  platform.h
src/platform/win32/: platform_win32.cpp
src/renderer/: buffers.cpp  buffers.h  font_manager.cpp  font_manager.h  font_renderer.cpp  font_renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_frontend.cpp  renderer_frontend.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/renderer/gl/: gl_backend.cpp  gl_backend.h  gl_buffers.cpp  gl_buffers.h  gl_font_manager.cpp  gl_font_manager.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_vertex_array.cpp  gl_vertex_array.h
